Updated correct url

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 alias dots='git --git-dir=$HOME/.dots.git/ --work-tree=$HOME'
 
 git init --bare $HOME/.dots.git
-dots remote add origin https://github.com/jaagr/dots.git
+dots remote add origin https://github.com/phiwer/dotfiles.git
 
 dots config status.showUntrackedFiles no
 
